# lawscraper

./: README.md  failed.jsonl  ms.py  ms2.py  multi_scraper.py  pyproject.toml  scraper.py  scraper2.py  scraper_utils.py
codes/: AK.jsonl  CA.jsonl  CT.jsonl  UT.jsonl
